--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
     "react-notifications": "^1.7.4",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
